[FIX/#108] P1-2 리뷰 결함 수정